fix: ajusta funcionalidad roles